# qemu-next

./: .gitignore  .gitmodules  MAINTAINERS  Makefile  Makefile.doc  Makefile.docs  Makefile.hw  Makefile.objs  Makefile.qom  Makefile.target  Makefile.trace  QEMU-docs.xml  Qconfig  acl.c  arch_init.c  arch_init.h  arm-dis.c  balloon.c  balloon.h  block-bochs.c  block-migration.c  block-nbd.c  block-parallels.c  block-qmp.c  block-raw-posix.c  block-raw-win32.c  block-vmdk.c  block-vmstate.c  block-vpc.c  block-vvfat.c  block.c  block.h  block_int.h  blockdev.c  blockdev.h  buffer.c  buffer.h  cache.c  check-qdict.c  check-qfloat.c  (+254 more)
QMP/: qmp-events.txt
audio/: Makefile  audio.c  audio.h  audio_int.h  coreaudio.c  mixeng.c  mixeng_template.h  spiceaudio.c  wavcapture.c
backends/: Makefile  Qconfig  block_dev.c  block_dev.h  block_file.c  block_file.h
block/: Makefile  blkdebug.c  blkverify.c  bochs.c  cloop.c  core.c  cow.c  cow2.c  dmg.c  iscsi.c  nbd-protocol.c  nbd.c  parallels.c  posix-aio-compat.c  qcow.c  qcow2-cluster.c  qcow2-refcount.c  qcow2.c  qcow2.h  qed-check.c  qed-cluster.c  qed-gencb.c  qed-l2-cache.c  qed-lock.c  qed-rq.c  qed-table.c  qed.c  qed.h  raw-aio.h  raw-linux-aio.c  raw-posix-aio.h  raw-posix.c  raw-tp-aio.c  raw-win32.c  raw.c  sheepdog.c  stream.c  vdi.c  vmdk.c  vmstate.c  (+2 more)
bsd-user/: main.c  path.c
char/: com.c  fd.c  file.c  mux.c  null.c  pipe.c  pp-bsd.c  pp-linux.c  pty.c  stdio.c  tcp.c  tty.c  udp.c  vc.c
chrdrv/: Makefile  Qconfig  chrdrv.c  (+14 more)
libqdev/: Makefile.am  configure.ac  qdev-0.1.pc.in
libqdev/src/: Makefile.am
(+944 files in other folders)
